# libfreesmartphone-glib

./: .gitignore  Makefile.am  README  TODO  configure.ac  libfreesmartphone-glib.pc.in  libfreesmartphone-glib_git.bb
cfg/: org.freedesktop.Gypsy.Accuracy.xml  org.freedesktop.Gypsy.Course.xml  org.freedesktop.Gypsy.Device.xml  org.freedesktop.Gypsy.Position.xml  org.freedesktop.Gypsy.Time.xml  org.freesmartphone.Application.Manager.xml  org.freesmartphone.Audio.Manager.xml  org.freesmartphone.Device.Audio.xml  org.freesmartphone.Device.Display.xml  org.freesmartphone.Device.IdleNotifier.xml  org.freesmartphone.Device.Input.xml  org.freesmartphone.Device.LED.xml  org.freesmartphone.Device.Orientation.xml  org.freesmartphone.Device.PowerSupply.xml  org.freesmartphone.Device.Vibrator.xml  org.freesmartphone.Error.xml  org.freesmartphone.GSM.Call.xml  org.freesmartphone.GSM.Device.xml  org.freesmartphone.GSM.Error.xml  org.freesmartphone.GSM.Network.xml  org.freesmartphone.GSM.SIM.xml  org.freesmartphone.GSM.SMS.xml  org.freesmartphone.MusicPlayer.Playlist.xml  org.freesmartphone.MusicPlayer.xml  org.freesmartphone.PIM.Call.xml  org.freesmartphone.PIM.CallQuery.xml  org.freesmartphone.PIM.Calls.xml  org.freesmartphone.PIM.Contact.xml  org.freesmartphone.PIM.ContactQuery.xml  org.freesmartphone.PIM.Contacts.xml  org.freesmartphone.PIM.Fields.xml  org.freesmartphone.PIM.Message.xml  org.freesmartphone.PIM.MessageFolder.xml  org.freesmartphone.PIM.MessageQuery.xml  org.freesmartphone.PIM.Messages.xml  org.freesmartphone.Resource.xml  org.freesmartphone.Usage.xml
src/: Makefile.am  dbus-marshal.list  dbus-types.c  dbus-types.h  freesmartphone-glib.h
src/gypsy/: Makefile.am
src/odeviced/: Makefile.am
src/ogsmd/: Makefile.am
src/opimd/: Makefile.am
src/ousaged/: Makefile.am
tools/: dbus-rapid-bindings.py
xml/: org.freesmartphone.Device.Audio.xml  org.freesmartphone.Device.Display.xml  org.freesmartphone.Device.Error.xml  org.freesmartphone.Device.IdleNotifier.xml  org.freesmartphone.Device.Input.xml  org.freesmartphone.Device.LED.xml  org.freesmartphone.Device.Orientation.xml  org.freesmartphone.Device.PowerSupply.xml  org.freesmartphone.Device.Vibrator.xml  org.freesmartphone.Error.xml  org.freesmartphone.GSM.Call.xml  org.freesmartphone.GSM.Device.xml  org.freesmartphone.GSM.Error.xml  org.freesmartphone.GSM.Network.xml  org.freesmartphone.GSM.SIM.xml  org.freesmartphone.GSM.SMS.xml  org.freesmartphone.Notifications.xml  org.freesmartphone.PIM.Call.xml  org.freesmartphone.PIM.CallQuery.xml  org.freesmartphone.PIM.Calls.xml  org.freesmartphone.PIM.Contact.xml  org.freesmartphone.PIM.ContactQuery.xml  org.freesmartphone.PIM.Contacts.xml  org.freesmartphone.PIM.Fields.xml  org.freesmartphone.PIM.Message.xml  org.freesmartphone.PIM.MessageFolder.xml  org.freesmartphone.PIM.MessageQuery.xml  org.freesmartphone.PIM.Messages.xml  org.freesmartphone.Usage.Error.xml  org.freesmartphone.Usage.xml
